# dlu_voice_transcriber

./: .gitignore  README  pyproject.toml
.github/workflows/: python-cicd.yml  python-publish.yml
audio_to_text/: __main__.py
audio_to_text/core/: recorder.py
src/dlu_voice_transcriber/: __main__.py
src/dlu_voice_transcriber/core/: recorder.py
